2020-11-12 Wiley E. Hill <wileyhill@gmail.com>

    * src/gtksheet/gtkdatatextview.c: Replace g_strdup -> strdup.

2020-11-10 Wiley E. Hill <wileyhill@gmail.com>

    * src/gtksheet/gtkitementry.c: Revise gtk_item_entry_draw_text to just use
      GTK_STATE_NORMAL rather than calling gtk_widget_get_state on the stack,
      the entry should always be NORMAL. Replace lame FOR loop in function
      insert_thousands_seps with WHILE loop.

2020-11-08 Wiley E. Hill <wileyhill@gmail.com>

    * src/gtksheet/gtksheet.c: Remove unused function:

          * _default_font_ascent
          * _default_font_descent
          * _gtk_sheet_count_visible

2020-11-06 Wiley E. Hill <wileyhill@gmail.com>

    * src/gtksheet/gtkitementry.c: Revise gtk_item_entry_create_layout to utilize
      an ancillary integer; char_offset.

    * src/gtksheet/gtksheet.c: Revise gtk_sheet_button_release_handler to utilize
      an ancillary integer; new_height.

2020-11-05 Wiley E. Hill <wileyhill@gmail.com>

    * Add generic GPL License header:

          * include/gtksheet/gtksheet-marshal.h
          * src/gtksheet/gtksheet-marshal.c

    * src/x_menus.c: Include geda_toolbar.h and fix fix cast; GTK_TOOLBAR ->
      GEDA_TOOLBAR.

2020-11-04 Wiley E. Hill <wileyhill@gmail.com>

    * include/gtksheet/*.h": Update FSF address in header files.

    * src/gtksheet/*.c: Update FSF address in file header.

2020-11-03 Wiley E. Hill <wileyhill@gmail.com>

    * Remove references to generated data (by glib-mkenums) as the files are now
      static, add generic GPL License header:

          * include/gtksheet/gtksheettypebuiltins.h
          * src/gtksheet/gtksheettypebuiltins.c

2020-11-02 Wiley E. Hill <wileyhill@gmail.com>

    * src/gtksheet/gtksheet.c: Remove NULL validation and redundant conditional
      check of GTK_SHEET_DEBUG_DRAW_LABEL in _cell_draw_label.

    * src/gtksheet/gtksheetcolumn.c: Replace double asterisk Doxygen tags.
